dnl Copyright (C) 2004 Simon Josefsson.
dnl
dnl This file is part of Autobuild.
dnl
dnl Autobuild is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published
dnl by the Free Software Foundation; either version 2, or (at your
dnl option) any later version.
dnl
dnl Autobuild is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with Autobuild; see the file COPYING.  If not, write to the
dnl Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl Boston, MA 02111-1307, USA.

AC_INIT(autobuild, 2.1, bug-autobuild@josefsson.org)

AM_INIT_AUTOMAKE(gnits)

AM_MISSING_PROG(HELP2MAN, help2man, $missing_dir)

AM_PATH_LISPDIR

AB_INIT

AC_CONFIG_FILES(Makefile doc/Makefile examples/Makefile)

AC_OUTPUT
